# velora

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
Resources/: Info.plist  Velora.entitlements
docs/: ARCHITECTURE.md  SPEC.md  TESTING.md
docs/plans/: 2026-07-11-hud-trust-recovery-design.md  2026-07-11-live-hud-streaming-clipboard-design.md  2026-07-11-performance-quality-hud-design.md  2026-07-11-personal-dictionary-icloud-design.md  2026-07-11-personal-dictionary-icloud.md  2026-07-15-power-release.md  2026-07-19-portable-settings.md
docs/releases/: v0.6.0.md
docs/research/: 2026-07-11-performance-quality-validation.md  audit-v1.md  design-brief.md  product-teardown.md  smartness-v2.md  stack-research.md  stt-multilingual-decision.md
engine/: README.md  pyproject.toml
engine/scripts/: benchmark_cleanup_quality.py  benchmark_stt_backends.py
engine/src/velora_engine/: __init__.py  audio_store.py  cleanup.py  cleanup_process.py  cleanup_worker.py  config.py  diarization.py  editing.py  formatting.py  media.py  meeting_notes.py  models.py  protocol.py  server.py  stt.py  vocab_miner.py
engine/src/velora_engine/modes_builtin/: code.json  email.json  message.json  note.json  raw.json  terminal.json
engine/tests/: conftest.py  test_audio.py  test_benchmark_cleanup_quality.py  test_benchmark_stt_backends.py  test_cleanup.py  test_cleanup_process.py  test_diarization.py  test_divergence.py  test_editing.py  test_formatting.py  test_framing.py  test_media.py  test_meetings.py  test_models.py  test_server.py  test_server_streaming.py  test_stt_segmenting.py  test_transcribe_cpp_stt.py  test_transcribe_file.py  test_vocab_miner.py
engine/tests/fixtures/: fake_cleanup_worker.py
ios/: README.md  project.yml
ios/Resources/: Info.plist
ios/Tests/: RecognitionFinalizationPolicyTests.swift  TranscriptDeliveryTests.swift  TranscriptFormatterTests.swift  (+1 more)
scripts/: bump-version.sh  engine-smoke.py  make-app.sh  make-dmg.sh  make-signing-cert.sh  make-sounds.sh  signing-config.sh  test-signing-config.sh  test-site.py  verify-dmg.sh
site/: README.md  index.html  script.js  styles.css
(+99 files in other folders)
