[project]
name = "velora-engine"
version = "0.1.0"
description = "Velora on-device inference engine: streaming STT + LLM cleanup over a unix socket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31.3",
    "mlx-whisper>=0.4.3",
    "parakeet-mlx>=0.5.2",
    # mlx-lm 0.31.3 crashes on import with transformers 5.13 (AutoTokenizer.register).
    # Pin until upstream fixes compatibility. See spikes/engine/FINDINGS.md.
    "transformers>=5.0,<5.4",
    "huggingface-hub>=0.26",
    "numpy>=1.26",
]

[project.scripts]
velora-engine = "velora_engine.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/velora_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
